--- a/application/admin/view/Income_static_income.html
+++ b/application/admin/view/Income_static_income.html
@@ -28,11 +28,9 @@
                 <th>投资币种</th>
                 <th>币种数量</th>
                 <th>收益利率</th>
-                <th>静态收益</th>
                 <th>主流币收益</th>
                 <th>平台币收益</th>
                 <th>时间</th>
-                <th>收益状态</th>
             </tr>
             </thead>
             <tbody>
@@ -41,18 +39,13 @@
                 <td>{$key+1}</td>
                 <td>{$vo.uid}/{$vo.username}</td>
                 <td>{$vo.order_no}</td>
-                <td>0</td>
+                <td>{$vo.burn_money}</td>
                 <td>{$vo.alias_name}</td>
                 <td>{$vo.total_coin}</td>
                 <td>{$vo.percent}%</td>
-                <td>{$vo.base_money}</td>
                 <td>{$vo.main_coin}</td>
                 <td>{$vo.htd_coin}</td>
                 <td>{$vo.create_time|date="Y-m-d H:i:s",###}</td>
-                <td>{switch name='$vo.status'}
-                    {case value='0'}默认{/case}
-                    {case value='1'}禁用{/case}
-                    {/switch}</td>
             </tr>
             {/foreach}
             </tbody>
