--- a/application/index/view/login_directdrive.html
+++ b/application/index/view/login_directdrive.html
@@ -38,7 +38,7 @@
                     {else}
                     <div class="price" style="color:chartreuse">激活</div>
                     {/if}
-                    <div class="total-price">{:date("Y-m-d",$vo.last_login_time)}</div>
+                    <div class="total-price">{:date("Y-m-d",$vo.regtime)}</div>
                 </li>
                 {/foreach}
             </ul>
