--- a/application/admin/view/currency_edit.html
+++ b/application/admin/view/currency_edit.html
@@ -21,7 +21,7 @@
                 <div class="layui-form-item">
                     <label class="layui-form-label">币种价格</label>
                     <div class="layui-input-inline">
-                        <input type="text" name="price"  value="{$res['price']}" oninput = "value=value.replace(/[^\d]/g,'')" required lay-verify="required" placeholder="请输入币种价格" class="layui-input txt">
+                        <input type="number" name="price"  value="{$res['price']}" required lay-verify="required" placeholder="请输入币种价格" class="layui-input txt">
                     </div>
                 </div>
                 <div class="layui-form-item">
@@ -34,6 +34,16 @@
                     <label class="layui-form-label">备注信息</label>
                     <div class="layui-input-inline">
                         <input type="text" name="note"  value="{$res['note']}" placeholder="请输入币种提示" class="layui-input txt">
+                    </div>
+                </div>
+                <div class="layui-form-item">
+                    <label class="layui-form-label">币种二维码</label>
+                    <div class="layui-input-inline">
+                        <input type="file" name="cu_qrcode" id="file1" onchange="checkFileExt(this.value)">
+                        {if $res['log'] eq true}
+                            <img src="/{$res['wallet_addr']}" alt="111" style="width: 100px;height: 100px">
+                        {else /}
+                        {/if}
                     </div>
                 </div>
                 <div class="layui-form-item">
