--- a/public/css/wallet/wallet.css
+++ b/public/css/wallet/wallet.css
@@ -517,7 +517,8 @@ input::-webkit-inner-spin-button {
 	height: .3rem;
 	background: #4080ff;
 	border-radius: 50%;
-	vertical-align: bottom;
+	vertical-align: text-bottom;
+	padding-left: 1px;
 }
 .payment .payment_ul{
 	margin: 0 0 3%;
@@ -652,9 +653,12 @@ input::-webkit-inner-spin-button {
 	border-radius: .3rem;
 }
 .payment_wenma .qb_bg_img .payment_wenma_sc{
+	width: .5rem;
+	height: .5rem;
 	display: block;
 	position: absolute;
-	right: 0;
+	right: .2rem;
+	top: .1rem;
 	
 	
 }
