--- a/application/index/view/wallet_wallet.html
+++ b/application/index/view/wallet_wallet.html
@@ -269,7 +269,7 @@
     	<div class="payment_wenma">
     		<!--背景-->
     		<div class="qb_bg"></div>
-    		<div class="qb_bg_img">
+    		<div class="qb_bg_img" id="tg_qrcode">
     			<img class="payment_wenma_sc"  src="__PUBLIC__/images/wallet/qbscq.png"/>
     			<img class="payment_wenma_Two" src="__PUBLIC__/images/wallet/timg.jpg"/>
     		</div>  	
