--- a/application/index/view/wallet_wallet.html
+++ b/application/index/view/wallet_wallet.html
@@ -89,7 +89,7 @@
 							</ul>
 							<div class="payment_cont">
 								<div class="payment_cont_item avtive">
-									<div class="fshe">支付硬币</div>
+									<div class="fshe">支付地址</div>
 									<div class="payment_cont_text">
 										<textarea readonly name="" id="codeNum" cols="30" rows="10" class="p_text">11111111</textarea>
 										<div class="payment_cont_sox">
@@ -125,7 +125,7 @@
 
 
 										<div class="payment_cont_wz">
-											<p>*请仔细检查转账钱包地址，如填写钱包地址错误导致公司没有收到这笔转账数额，公司将不承担次损失</p>
+											<p>*请仔细检查转账钱包地址，如填写钱包地址错误导致公司没有收到这笔转账数额，公司将不承担此次损失</p>
 										</div>
 									</div>
 								</div>
@@ -192,7 +192,12 @@
 					<div class="shadow-wrap-up">
 						<div class="assetPopup pop">
 
-							<div class="det">资产</div>
+							<div class="det">
+									<span>资产</span>
+									<p class="iconfont hideTz">
+										<img src="/public/images/wallet/qbscq.png"/>
+									</p>
+							</div>
 
 							<!-- 标题 -->
 							<div class="thead-zp">
@@ -240,9 +245,9 @@
 								</ul>
 							</div>
 
-							<div class="iconfont hideTz">
+							<!-- <div class="iconfont hideTz">
 								<img src="/public/images/wallet/qbscq.png"/>
-							</div>
+							</div> -->
 						</div>
 					</div>
 					<!--点击投资-二维码-弹框-->
@@ -305,11 +310,11 @@
     			<img class="payment_wenma_sc"  src="__PUBLIC__/images/wallet/qbscq.png"/>
     			<img class="payment_wenma_Two" src="__PUBLIC__/images/wallet/timg.jpg"/>
     		</div>  	
-        <!-- 底部导航 -->        
-        <div class="bottomNavWrap container" id="bottomNavWrap" data-id="{$id}"></div>
+        
 
 	</div>
-
+	<!-- 底部导航 -->        
+	<div class="bottomNavWrap container" id="bottomNavWrap" data-id="{$id}"></div>
 	<!--弹框-阴影-->
 	<!--<div class="shadow"></div>-->
 
