--- a/application/admin/view/user_index.html
+++ b/application/admin/view/user_index.html
@@ -27,7 +27,7 @@
                     <th>状态</th>
                     <!-- <th>发文免审</th> -->
                     <th>创建时间</th>
-                    <th>最后登录时间</th>
+                    <!-- <th>最后登录时间</th> -->
                     <!-- <th>最后登录IP</th> -->
                     <th>操作</th>
                 </tr>
@@ -43,8 +43,8 @@
                         <input type="checkbox" lay-skin="switch" lay-text="免审|一般" lay-filter="switchdeveloper" value="{$vo['id']}" {php}echo $vo[ 'developer']==1 ? 'checked' : '';{/php}>
                         </a>
                     </td> -->
-                    <td>{$vo.regtime}</td>
-                    <td>{$vo.last_login_time|date="Y-m-d H:i:s",###}</td>
+                    <td>{$vo.regtime|date="Y-m-d H:i:s",###}</td>
+                    <!-- <td>{$vo.last_login_time|date="Y-m-d H:i:s",###}</td> -->
                     <!-- <td>{$vo.last_login_ip}</td> -->
                     <td>
                         <a href="{:url('admin/user/edit',['id'=>$vo['id']])}" class="layui-btn layui-btn-normal layui-btn-sm">编辑</a>
