后台增加用户钱包列表

--- a/application/admin/view/user_index.html
+++ b/application/admin/view/user_index.html
@@ -27,7 +27,7 @@
                     <th>状态</th>
                     <!-- <th>发文免审</th> -->
                     <th>创建时间</th>
-                    <!-- <th>最后登录时间</th> -->
+                    <th>最后登录时间</th>
                     <!-- <th>最后登录IP</th> -->
                     <th>操作</th>
                 </tr>
