--- a/application/index/view/index_present.html
+++ b/application/index/view/index_present.html
@@ -200,9 +200,9 @@
 					$(this).parent().siblings(".currency_list").children(".pull_down_content").slideUp(500)
 					if(!$(this).find(".pull_down").hasClass("up")){
 						$(".pull_down").removeClass("up")
-						$(this).find(".pull_down").addClass("up").removeClass("down")
+						$(this).find(".pull_down").addClass("up")
 					}else{
-						$(this).find(".pull_down").removeClass("up").addClass("down")	
+						$(this).find(".pull_down").removeClass("up")
 					}
 				})
 			});
