--- a/public/css/login.css
+++ b/public/css/login.css
@@ -110,10 +110,14 @@ color: #637fbe
 .login-new{
     display: -webkit-box;
 	display: -moz-box;
-	display: -ms-flexbox;
 	display: -webkit-flex;
-    display: flex;
-    justify-content: space-between;
+	display: -moz-flex;
+	display: -ms-flexbox;
+	display: flex;
+    -webkit-box-pack: space-between;
+	-ms-flex-pack: space-between;
+	-webkit-justify-content: space-between;
+	justify-content: space-between;
     padding-top:.3rem;
 }
 .login-new a{
