投资收益用户

--- a/application/admin/view/income_push_income.html
+++ b/application/admin/view/income_push_income.html
@@ -22,8 +22,8 @@
             <thead>
             <tr>
                 <th style="width: 30px;">ID</th>
-                <th>收益账号</th>
-                <th>直推账号</th>
+                <th>产生收益用户</th>
+                <th>获得收益用户</th>
                 <th>订单号</th>
                 <th>投资金额</th>
                 <th>投资币种</th>
@@ -39,7 +39,7 @@
             <tr>
                 <td>{$key+1}</td>
                 <td>{$vo.username}</td>
-                <td>{$vo.get_uid}</td>
+                <td>{$vo.get_username}</td>
                 <td>{$vo.order_no}</td>
                 <td>{$vo.base_money}</td>
                 <td>{$vo.alias_name}</td>
