--- a/application/admin/view/currency_edit.html
+++ b/application/admin/view/currency_edit.html
@@ -39,7 +39,7 @@
                 <div class="layui-form-item">
                     <label class="layui-form-label">币种二维码</label>
                     <div class="layui-input-inline">
-                        <input type="file" name="cu_qrcode" id="file1" onchange="checkFileExt(this.value)">
+                        <input type="file" name="cu_qrcode" id="file1" onchange="checkFileExt2(this.value)">
                         {if $res['log'] eq true}
                             <img src="/{$res['wallet_addr']}" alt="111" style="width: 100px;height: 100px">
                         {else /}
@@ -100,6 +100,29 @@
         });
     }
     function checkFileExt(filename)
+    {
+        var flag = false; //状态
+        var arr = ["jpg","png","gif"];
+        //取出上传文件的扩展名
+        var index = filename.lastIndexOf(".");
+        var ext = filename.substr(index+1);
+        //循环比较
+        for(var i=0;i<arr.length;i++) {
+            if(ext == arr[i]) {
+                flag = true; //一旦找到合适的，立即退出循环
+                break;
+            }
+        }
+        //条件判断
+        if(!flag) {
+            alert("文件名不符合");
+            var obj=document.getElementById('file');
+            obj.outerHTML=obj.outerHTML;
+        }
+
+    }
+
+    function checkFileExt1(filename)
     {
         var flag = false; //状态
         var arr = ["jpg","png","gif"];
