--- a/public/css/wallet/wallet.css
+++ b/public/css/wallet/wallet.css
@@ -434,9 +434,14 @@ input::-webkit-inner-spin-button {
 
 
 .wtf_xiala {height: 0.50rem;border: 0.02rem solid #ccc;padding: 0.13rem;width: 88%;margin: 0 0.3rem;margin-top: 0.5rem;border-radius: 0.08rem;line-height: 0.5rem;}
-.wtf_xiala p {display: inline-block;text-align: left;font-size: 0.3rem;color: #dadbe4;}
+.wtf_xiala p {display: inline-block;text-align: left;font-size: 0.3rem;color: #dadbe4;width: 0.3rem}
 .wtf_xiala img{width: 0.3rem;height: 0.3rem;padding-top :0.1rem}
-
+.wtf_xl{
+	float: right;
+}
+.wtf_xiala .p1{
+	margin-left: -.06rem;
+}
 .wtf_item2_div{height: 0.2rem;margin: 0.4rem;}
 .wtf_item2{padding: 0.1rem 0.2rem;background: #242e65;margin: 0.3rem 0.5rem;overflow-y: scroll;}
 
