--- a/application/index/view/login_index.html
+++ b/application/index/view/login_index.html
@@ -28,7 +28,7 @@
 							  <span class="from-tit">手机号:</span>
 							  <div class="from-icon">
 									<img src="__PUBLIC__images/login/shouji.png" alt="">
-							  <input type="text" name="phone" placeholder="请输入手机号"class="pptt phone" value>
+							  <input type="tel" name="phone" placeholder="请输入手机号"class="pptt phone" value>
 								</div>
 						  </div>
 						  <div class="info mistake"></div>
