--- a/application/index/view/login_register.html
+++ b/application/index/view/login_register.html
@@ -61,7 +61,7 @@
 							<span class="from-tit">手机号:</span>
 							<div class="from-icon">
 								<img src="__PUBLIC__images/login/shouji.png" alt="">
-								<input type="phone" placeholder="请输入手机号码" name="phone"  value class="pptt phone">
+								<input type="tel" placeholder="请输入手机号码" name="phone"  value class="pptt phone">
 							</div>
 						</div>
 						<div class="info mistake"></div>
