--- a/application/index/view/Login_retrieve.html
+++ b/application/index/view/Login_retrieve.html
@@ -25,7 +25,7 @@
                         <span class="from-tit">手机号:</span>
                         <div class="from-icon">
                                 <img src="__PUBLIC__/images/login/good.png" alt="">
-                        <input type="phone" placeholder="请输入手机号" name="phone"class="pptt phone" value>
+                        <input type="tel" placeholder="请输入手机号" name="phone"class="pptt phone" value>
                         </div>
                     </div>
                     <div class="info mistake"></div>
@@ -47,7 +47,7 @@
                       </div>
                       <div class="info mistake"></div>
                       <div class="from-group">
-                            <span class="from-tit from-cc">再输入密码:</span>
+                            <span class="from-tit from-cc">确认密码:</span>
                             <div class="from-icon">
                                     <img src="__PUBLIC__/images/login/suo.png" alt="">
                             <input type="password" placeholder="请再输入一次密码" name="pwd1"class="pptt pwd2" value >
@@ -61,4 +61,5 @@
 <script src="__PUBLIC__/js/public/jquery-1.8.3.js"></script>
 <script src="__PUBLIC__/js/public/publicAlert.js"></script>
  <script src="__PUBLIC__/js/login/retrieve.js"></script>
+
 </html>
