提交后台自动收益修改

--- a/application/index/view/wallet_wallet.html
+++ b/application/index/view/wallet_wallet.html
@@ -209,7 +209,7 @@
 										<li>
 											<div class="name">{$vs.alias_name}</div>
 											<div class="number">{$vs.cu_num}</div>
-											<div class="price">[$vs.bonus_wallet]</div>
+											<div class="price">{$vs.bonus_wallet}</div>
 											<div class="total-price">{$vs.rate_wallet}</div>
 										</li>
 										{/foreach}
