--- a/application/index/view/wallet_wallet.html
+++ b/application/index/view/wallet_wallet.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="__PUBLIC__/css/public/reset.css">
 	<link rel="stylesheet" href="__PUBLIC__/css/public/bottomNav.css" />
 	<link rel="stylesheet" href="__PUBLIC__/css/public/base.css" />
-	<link rel="stylesheet" href="__PUBLIC__/css/wallet/wallet.css" />
+	<link rel="stylesheet" href="__PUBLIC__/css/wallet/wallet.css?version=1.1.0" />
 	<link rel="stylesheet" href="__PUBLIC__/font/iconfont.css" />
 </head>
 
@@ -315,7 +315,7 @@
     
 	 <script src="__PUBLIC__/js/public/jquery-1.8.3.min.js"></script> 
 	<script src="__PUBLIC__/js/public/tab.js" ></script>
-	<script  src="__PUBLIC__/js/wallet/waller.js" ></script>
+	<script  src="__PUBLIC__/js/wallet/waller.js?v=1.1.0" ></script>
 	<script src="__PUBLIC__/plugins/layer/layer-min.js"></script>
 	<script src="/public/plugins/qrcode/qrcode.min.js"></script>
 	<!--底部nav=>Tab功能-->
